# ab-test-engine

./: .gitignore  README.md  generate_notebook.py  local.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py  schemas.py
api/routers/: analysis.py  experiments.py
app/: streamlit_app.py
app/components/: effect_panel.py  segment_panel.py  sequential_panel.py  upload_or_generate.py  validity_panel.py
config/: default_config.yaml
core/: data_access.py  inference.py  persistence.py  pipeline.py  segments.py  sequential.py  validity.py
data_sim/: ground_truth.py  simulator.py
db/: connection.py  schema.sql  seed.py
notebooks/: writeup.ipynb
scripts/: run_validation_suite.sh
tests/: test_api.py  test_connection.py  test_data_access.py  test_ground_truth.py  test_inference.py  test_persistence.py  test_pipeline.py  test_segments.py  test_sequential.py  test_simulator.py  test_validity.py
validation/: test_ci_coverage.py  test_cuped_variance_reduction.py  test_peeking_inflation.py  test_segment_recovery.py  validation_report.md
