[project]
name = "ab-test-engine"
version = "0.1.0"
description = "A/B Test Analysis Engine — SRM, power, CUPED, sequential-peeking correction, segment heterogeneity"
requires-python = ">=3.11"

[tool.pytest.ini_options]
markers = [
    "slow: simulation-based validation tests (ground-truth coverage, peeking FPR) — excluded from default CI run",
]
testpaths = ["tests", "validation"]
addopts = "-ra"
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]